--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,13 @@ coverage.xml
 
 # Django stuff:
 *.log
+*.pot
+*.pyc
+__pycache__/
 local_settings.py
+db.sqlite3
+media
+
 
 # Flask stuff:
 instance/
