--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 .AppleDouble
 .LSOverride
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
