Switch to CSV from JSON.
I couldn't figure out how to properly parse the JSON from Limesurvey. But you can also request CSV which is much easier to get into a DataFrame.

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,6 @@ ENV/
 pulsemanager/.DS_Store
 pulsemanager/.DS_Store
 pulsemanager/.DS_Store
+outfile
+pulsemanager/.DS_Store
+pulsemanager/.DS_Store
