--- a/compose/production/nginx/sites-enabled/pulsemanager.conf
+++ b/compose/production/nginx/sites-enabled/pulsemanager.conf
@@ -16,6 +16,7 @@ server {
         proxy_set_header Host $my_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_read_timeout 1200;
     }
 
     if ($http_x_forwarded_proto != 'https') {
