--- a/env.example
+++ b/env.example
@@ -1,35 +1,42 @@
+#Lime survey
+PULSESERVER=https://demo.limesurvey.org/index.php/admin/remotecontrol
+PULSEMGRUSER=demo
+PULSEMGRPSWD=demo
+
+#Datbase host
+PULSEDBHOST=127.0.0.1
+
 
 # PostgreSQL
-POSTGRES_PASSWORD=mysecretpass
-POSTGRES_USER=postgresuser
+POSTGRES_PASSWORD=postresspassword
+POSTGRES_USER=postgres
+CONN_MAX_AGE=60
 
-# Domain name, used by caddy
-DOMAIN_NAME=pulse.multiplicationnetwork.org
 
 # General settings
 # DJANGO_READ_DOT_ENV_FILE=True
-DJANGO_ADMIN_URL=
+DJANGO_ADMIN_URL=^admin/
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=%9/}Nx{K5/3/Sqd}C!{%L,@%Vn]~P%8A^cgG3J1:~Xv)MvRFkc
-DJANGO_ALLOWED_HOSTS=.pulse.multiplicationnetwork.org
+DJANGO_SECRET_KEY=reallysuperlongdjangosecretkey
+DJANGO_ALLOWED_HOSTS=.demo.limesurvey.org
 
 # AWS Settings
-DJANGO_AWS_ACCESS_KEY_ID=
-DJANGO_AWS_SECRET_ACCESS_KEY=
-DJANGO_AWS_STORAGE_BUCKET_NAME=
+DJANGO_AWS_ACCESS_KEY_ID=AWSACCESSKEY
+DJANGO_AWS_SECRET_ACCESS_KEY=REALLYLONGAWSSECRETACCESSKEY
+DJANGO_AWS_STORAGE_BUCKET_NAME=surveynamebucket
+AWS_REGION=us-east-1
 
 # Used with email
-DJANGO_MAILGUN_API_KEY=
-DJANGO_SERVER_EMAIL=
-MAILGUN_SENDER_DOMAIN=
+DJANGO_MAILGUN_API_KEY=key-mailgunapikey
+DJANGO_SERVER_EMAIL=limesurvey@gmail.com
+MAILGUN_SENDER_DOMAIN=mg.example.com
+ACCOUNT_TEMPLATE_EXTENSION=html
 
 # Security! Better to use DNS for this task, but you can use redirect
 DJANGO_SECURE_SSL_REDIRECT=False
 
 # django-allauth
 DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
+
 # Sentry
-DJANGO_SENTRY_DSN=
-
-
-
+DJANGO_SENTRY_DSN=https://yoursentrydnsvalues@sentry.io/123456
