Don't store coverage reports in git.

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,29 @@ outfile
 pulsemanager/.DS_Store
 pulsemanager/.DS_Store
 *.png
+coverage_html_report/coverage_html.js
+coverage_html_report/index.html
+coverage_html_report/jquery.ba-throttle-debounce.min.js
+coverage_html_report/jquery.hotkeys.js
+coverage_html_report/jquery.isonscreen.js
+coverage_html_report/jquery.min.js
+coverage_html_report/jquery.tablesorter.min.js
+coverage_html_report/pulsemanager_contrib___init___py.html
+coverage_html_report/pulsemanager_contrib_sites___init___py.html
+coverage_html_report/pulsemanager_contrib_sites_migrations_0001_initial_py.html
+coverage_html_report/pulsemanager_contrib_sites_migrations_0002_alter_domain_unique_py.html
+coverage_html_report/pulsemanager_contrib_sites_migrations_0003_set_site_domain_and_name_py.html
+coverage_html_report/pulsemanager_contrib_sites_migrations___init___py.html
+coverage_html_report/pulsemanager_surveys_admin_py.html
+coverage_html_report/pulsemanager_surveys_models_py.html
+coverage_html_report/pulsemanager_surveys_tests_py.html
+coverage_html_report/pulsemanager_surveys_urls_py.html
+coverage_html_report/pulsemanager_surveys_views_py.html
+coverage_html_report/pulsemanager_users_admin_py.html
+coverage_html_report/pulsemanager_users_apps_py.html
+coverage_html_report/pulsemanager_users_models_py.html
+coverage_html_report/pulsemanager_users_signals_py.html
+coverage_html_report/pulsemanager_users_urls_py.html
+coverage_html_report/pulsemanager_users_views_py.html
+coverage_html_report/status.json
+coverage_html_report/style.css
