--- a/.coveragerc
+++ b/.coveragerc
@@ -1,13 +1,14 @@
 # .coveragerc to control coverage.py
 [run]
 branch = False
-omit = 
+omit =
     */tests/*
     */config/*
     */docs/*
     */surveys/migrations/*
     */users/migrations/*
     */contrib/*
+    */lsrc3/*
     manage.py
 
 
