Added Google Analytics.

--- a/env.example
+++ b/env.example
@@ -40,3 +40,6 @@ DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
 
 # Sentry
 DJANGO_SENTRY_DSN=https://yoursentrydnsvalues@sentry.io/123456
+
+# GOOGLE ANALYTICS
+GOOGLE_ANALYTICS_PROPERTY_ID=UA-XXXXXXXXX-XX
